# local-rag-v2

./: .gitignore  README.md  pyproject.toml
data/: questions_legal.txt
docs/: DASHBOARD_GUIDE.md  EVAL_DIFF_REPORT.md  EVAL_DIFF_REPORT_V2.md  EVAL_DIFF_REPORT_V3.md  EVAL_DIFF_REPORT_V4.md  EVAL_DIFF_REPORT_V5.md
scripts/: evaluate.py  ingest.py  serve.py
src/rag_eval/: __init__.py  cli.py  config.py  logging_setup.py
src/rag_eval/api/: app.py  routes.py
src/rag_eval/dashboard/: index.html
src/rag_eval/eval/: gpu_monitor.py  harness.py  judge.py  metrics.py
src/rag_eval/graph/: builder.py  edges.py  nodes.py  state.py
src/rag_eval/ingest/: chunker.py  embedder.py  indexer.py  loader.py
src/rag_eval/retrieval/: reranker.py  store.py
