[project]
name = "rag-eval"
version = "0.1.0"
description = "RAG Evaluation Platform with LangGraph on DGX Spark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langchain>=0.3.18",
    "langchain-ollama>=0.3.2",
    "langchain-community>=0.3.15",
    "langchain-text-splitters>=0.3.6",
    "langchain-chroma>=0.2.2",
    "chromadb>=1.0.0",
    "datasets>=3.3.0",
    "huggingface-hub>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "nvidia-ml-py>=12.0.0",
    "pandas>=2.2.0",
    "rich>=13.9.0",
    "tqdm>=4.67.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sentence-transformers>=3.4.0",
]

[project.scripts]
rag-ingest = "rag_eval.cli:cli_ingest"
rag-evaluate = "rag_eval.cli:cli_evaluate"
rag-serve = "rag_eval.cli:cli_serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval"]
